Bug 398321 - proxy config script not recognized/used
Summary: proxy config script not recognized/used
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.12.6
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 401505 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-09-06 11:58 UTC by Joerg
Modified: 2018-11-29 00:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joerg 2018-09-06 11:58:38 UTC
I'm sitting behind a proxy. My up-to-date Fedora 27/KDE installation works with a proxy configuration script (under System Settings > Network > Settings) that is used by my Chrome browser as well.

Through that Chrome browser and its proxy config I can access the Fedora 27 updates repo correctly:

https://mirrors.fedoraproject.org/metalink?repo=fedora-27&arch=x86_64

Still, KDE Discover failes fetching this URL:

cannot update repo 'fedora': Cannot prepare internal mirrorlist: Curl error (28): Timeout was reached for https://mirrors.fedoraproject.org/metalink?repo=fedora-27&arch=x86_64 [Connection timed out after 30001 milliseconds] 


---
In an unpriviledged shell a curl call to that URL times out as no proxy is provided:
curl 'https://mirrors.fedoraproject.org/metalink?repo=fedora-27&arch=x86_64'

.. and succeedes when a proxy is added: 
curl -x 'http://.../' 'https://mirrors.fedoraproject.org/metalink?repo=fedora-27&arch=x86_64'
<?xml version="1.0" encoding="utf-8"?>                                                                                 
<metalink version="3.0" xmlns="http://www.metalinker.org/" type="dynamic" pubdate="Thu, 06 Sep 2018 11:28:39 GMT" generator="mirrormanager" xmlns:mm0="http://fedorahosted.org/mirrormanager">                                                                                                                      
  <files>                                                                                                                          
    <file name="repomd.xml">
    ...
Comment 1 Nate Graham 2018-09-13 17:59:55 UTC
Aleix, is this an issue with Discover, or with PackageKit? If the latter, is there anything Discover can do here to forward the proxy information to it?
Comment 2 Aleix Pol 2018-09-19 16:55:04 UTC
Looks like it's something we'll have to implement ourselves:
https://github.com/hughsie/PackageKit/blob/master/docs/setting-the-proxy.txt
Comment 3 Aleix Pol 2018-09-20 10:15:52 UTC
Git commit e08bc8fd55b90895560a60cccc0d1b583c6e42a9 by Aleix Pol.
Committed on 20/09/2018 at 10:13.
Pushed by apol into branch 'master'.

Forward proxy information to the PackageKit daemon

At start and upon change.

M  +31   -3    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +1    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.h

https://commits.kde.org/discover/e08bc8fd55b90895560a60cccc0d1b583c6e42a9
Comment 4 Aleix Pol 2018-11-29 00:46:55 UTC
*** Bug 401505 has been marked as a duplicate of this bug. ***