Forward proxy information to the PackageKit daemon

At start and upon change.

BUG: 398321