libdiscover/backends/PackageKitBackend/PackageKitBackend.h
@@ -100,6 +100,7 @@ class DISCOVERCOMMON_EXPORT PackageKitBackend : public AbstractResourcesBackend
         void includePackagesToAdd();
         void performDetailsFetch();
         AppPackageKitResource* addComponent(const AppStream::Component& component, const QStringList& pkgNames);
+        void updateProxy();
 
         QScopedPointer<AppStream::Pool> m_appdata;
         PackageKitUpdater* m_updater;
